<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/zelda"
    tools:context=".Activities.ManageGamesActivity">

    <ImageButton
        android:id="@+id/BtnGoBackManGames"
        style="@style/btn_go_back"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/LstAllGames"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnGoBackManGames" />

    <Button
        android:id="@+id/BtnTarifa"
        style="@style/btn_blue_back"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        android:text="@string/buy_tarifa"
        app:layout_constraintStart_toEndOf="@+id/BtnPartides"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/BtnPartides"
        style="@style/btn_purple_back"
        android:layout_marginStart="60dp"
        android:layout_marginTop="48dp"
        android:text="@string/buy_games"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        style="@style/lbl_option_question"
        android:layout_marginTop="48dp"
        android:text="@string/escollir_opcio_comprar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LstAllGames" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TxtInputLayoutGames"
        style="@style/text_input_layout"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="Partides"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnPartides"
        android:visibility="invisible">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TxtNumGames"
            style="@style/text_input_edit_text"
            android:inputType="number"
            android:textSize="20dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/BtnAccept"
        style="@style/btn_green_back"
        android:layout_marginTop="32dp"
        android:text="@string/confirmar"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtInputLayoutGames" />

</androidx.constraintlayout.widget.ConstraintLayout>