<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ManageMoneyActivity"
    android:background="@drawable/zelda">

    <ImageButton
        android:id="@+id/BtnGoBackManMoney"
        style="@style/btn_go_back"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:text="@string/escollir_opcio"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BtnRetrieveMoney"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/gradient_purple"
        android:text="@string/treure_diners"
        app:layout_constraintStart_toEndOf="@+id/BtnAddMoney"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/BtnAddMoney"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/gradient_green"
        android:text="@string/afegir_diners"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutMoney"
        android:layout_width="125dp"
        style="@style/text_input_layout"
        android:layout_marginTop="72dp"
        android:hint="Diners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnAddMoney">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TxtAddMoney"
            style="@style/text_input_edit_text"
            android:inputType="numberDecimal|numberSigned"
            android:paddingHorizontal="5dp"
            android:textColor="@color/white"
            android:textSize="25dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/BtnOptionDiners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/gradient_blue"
        android:text="@string/afegir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutMoney" />


</androidx.constraintlayout.widget.ConstraintLayout>